--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1",
-
-        "sylius/sylius": "^1.1",
-        "symfony/profiler-pack": "^1.0"
+        "sylius/sylius": "^1.1"
     },
     "require-dev": {
         "behat/behat": "^3.3",
