--- a/src/Resources/config/app/routing.yml
+++ b/src/Resources/config/app/routing.yml
@@ -11,6 +11,14 @@ sylius_translation_plugin_translation_set_message:
 sylius_translation_plugin_translation_locale:
     path: /admin/translation/{localeCode}
     defaults:
-        _controller: AcmeSyliusTranslationPlugin:Translation:translation
+        _controller: AcmeSyliusTranslationPlugin:Translation:locale
     requirements:
         localeCode: '^(?!set)[a-z]{2,3}(?:_[A-Z]{2})?$'
+
+sylius_translation_plugin_translation_locale_domain:
+    path: /admin/translation/{localeCode}/{domain}
+    defaults:
+        _controller: AcmeSyliusTranslationPlugin:Translation:locale
+    requirements:
+        localeCode: '^(?!set)[a-z]{2,3}(?:_[A-Z]{2})?$'
+        domain: '.+'
