--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -38,7 +38,7 @@ default:
         FriendsOfBehat\SymfonyExtension:
             bootstrap: tests/Application/config/bootstrap.php
             kernel:
-                class: Tests\Acme\SyliusExamplePlugin\Application\Kernel
+                class: Tests\Yaroslavche\SyliusTranslationPlugin\Application\Kernel
 
         FriendsOfBehat\VariadicExtension: ~
 
