Configure dummy TranslationContext

--- a/composer.json
+++ b/composer.json
@@ -55,5 +55,8 @@
         "branch-alias": {
             "dev-master": "1.4-dev"
         }
+    },
+    "scripts": {
+        "tests": "vendor/bin/behat --tags=\"~@javascript\""
     }
 }
