--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -1,10 +1,22 @@
-# Put your Behat suites definitions here
-
 default:
-    suites:
-        greeting_customer:
-            contexts:
-                - acme_sylius_example.context.ui.shop.welcome
+  suites:
+    greeting_customer:
+      contexts:
+        - yaroslavche_sylius_translation_plugin.context.ui.admin.translation
 
-            filters:
-                tags: "@greeting_customer"
+        - sylius.behat.context.hook.doctrine_orm
+
+        - sylius.behat.context.transform.locale
+        - sylius.behat.context.transform.shared_storage
+
+        - sylius.behat.context.setup.channel
+        - sylius.behat.context.setup.locale
+        - sylius.behat.context.setup.admin_security
+
+        - sylius.behat.context.ui.admin.managing_locales
+        - sylius.behat.context.ui.admin.managing_translatable_entities
+        - sylius.behat.context.ui.admin.notification
+        - sylius.behat.context.ui.shop.locale
+
+      filters:
+        tags: "@translation"
