--- a/src/Resources/config/admin_routing.yml
+++ b/src/Resources/config/admin_routing.yml
@@ -1,35 +1,27 @@
-sylius_translation_plugin_dashboard:
-    path: /admin/translation/
-    defaults:
-        _controller: YaroslavcheSyliusTranslationPlugin:Translation:dashboard
+#frontend
+yaroslavche_sylius_translation_plugin_dashboard:
+    path:     /admin/translation/
+    controller: Yaroslavche\SyliusTranslationPlugin\Controller\TranslationController::dashboard
 
-sylius_translation_plugin_translation_set_message:
-    path: /admin/translation/setMessage
-    defaults:
-        _controller: YaroslavcheSyliusTranslationPlugin:Translation:setMessage
-
-sylius_translation_plugin_locale_add_domain:
-    path: /admin/translation/addDomain
-    defaults:
-        _controller: YaroslavcheSyliusTranslationPlugin:Translation:addDomain
-
-sylius_translation_plugin_locale_domain_add_message:
-    path: /admin/translation/addDomainMessage
-    defaults:
-        _controller: YaroslavcheSyliusTranslationPlugin:Translation:addDomainMessage
-
-
-sylius_translation_plugin_translation_locale:
-    path: /admin/translation/{localeCode}
-    defaults:
-        _controller: YaroslavcheSyliusTranslationPlugin:Translation:locale
+yaroslavche_sylius_translation_plugin_locale:
+    path:     /admin/translation/{localeCode}
+    controller: Yaroslavche\SyliusTranslationPlugin\Controller\TranslationController::locale
     requirements:
-        localeCode: '^(?!set)[a-z]{2,3}(?:_[A-Z]{2})?$'
+        localeCode: '^[a-z]{2,3}(?:_[A-Z]{2})?$'
 
-sylius_translation_plugin_translation_locale_domain:
-    path: /admin/translation/{localeCode}/{domain}
-    defaults:
-        _controller: YaroslavcheSyliusTranslationPlugin:Translation:locale
-    requirements:
-        localeCode: '^(?!set)[a-z]{2,3}(?:_[A-Z]{2})?$'
-        domain: '.+'
+
+# ajax
+yaroslavche_sylius_translation_plugin_set_message:
+    path:     /admin/translation/setMessage
+    methods: ['POST']
+    controller: Yaroslavche\SyliusTranslationPlugin\Controller\TranslationController::setMessage
+
+yaroslavche_sylius_translation_plugin_add_domain:
+    path:     /admin/translation/addDomain
+    methods: ['POST']
+    controller: Yaroslavche\SyliusTranslationPlugin\Controller\TranslationController::addDomain
+
+#yaroslavche_sylius_translation_plugin_add_locale:
+#    path:     /admin/translation/addLocale
+#    methods: ['POST']
+#    controller: Yaroslavche\SyliusTranslationPlugin\Controller\TranslationController::addLocale
