--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -14,6 +14,7 @@ services:
             $translator: '@translator'
             $localeRepository: '@sylius.repository.locale'
             $kernelRootDir: '%kernel.root_dir%'
+            $kernelCacheDir: '%kernel.cache_dir%'
 
     Yaroslavche\SyliusTranslationPlugin\Service\TranslationService: '@yaroslavche_sylius_translation_plugin_translation_service'
 
