--- a/src/Resources/config/admin_routing.yml
+++ b/src/Resources/config/admin_routing.yml
@@ -19,10 +19,14 @@ yaroslavche_sylius_translation_plugin_set_message:
     methods: ['POST']
     controller: Yaroslavche\SyliusTranslationPlugin\Controller\TranslationController::setMessage
 
-yaroslavche_sylius_translation_plugin_add_domain:
-    path:     /admin/translation/addDomain
-    methods: ['POST']
-    controller: Yaroslavche\SyliusTranslationPlugin\Controller\TranslationController::addDomain
+yaroslavche_sylius_translation_plugin_get_message_catalogue:
+    path:     /admin/translation/getMessageCatalogue
+    methods: ['POST', 'GET']
+    controller: Yaroslavche\SyliusTranslationPlugin\Controller\TranslationController::getTranslationMessageCatalogue
+    requirements:
+        localeCode: '^[a-z]{2,3}(?:_[A-Z]{2})?$'
+    defaults:
+        localeCode: null
 
 #yaroslavche_sylius_translation_plugin_add_locale:
 #    path:     /admin/translation/addLocale
