--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -13,6 +13,7 @@ services:
     arguments:
       $translator: '@translator'
       $localeRepository: '@sylius.repository.locale'
+      $localeProvider: '@sylius.locale_provider'
       $kernelRootDir: '%kernel.root_dir%'
 
   Yaroslavche\SyliusTranslationPlugin\Service\TranslationService: '@yaroslavche_sylius_translation_plugin_translation_service'
